# project1

./: Step_1_Predict_target_protein_structure.ipynb  example.py  pyproject.toml
.github/workflows/: main.yaml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
tests/.github/workflows/: ci.yaml
