[tool.poetry]
name = "seqparser"
version = "0.1.0"
description = "Parser for Fasta and Fastq"
authors = ["JeffLin <jefflinbc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
